///protos/rpc/champion.proto

syntax = "proto3";

package user;

message User {
  string       email        = 1;
  string       password     = 2;
}

service AuthService {
  rpc GetAllUser (GetUserRequest) returns (GetUserResponse);
  rpc CreateUser (Empty) returns (Status);
}

message Empty {

}

message Status {
  int32 status = 1;
}

message GetUserRequest {
  string email = 1;
  string password = 2;
}

message GetUserResponse {
  repeated User users = 1;
}